portal-infra-nginx/istio/https.issuer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: acme-certficate-solver
  namespace: "#{DEPLOYMENT_NAMESPACE}#"
spec:
  ports:
  - port: 8090
    targetPort: 8089
  selector:
    acme.cert-manager.io/http01-solver: "true"
