portal-infra-nginx/istio/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "istio-ingressgateway-#{DEPLOYMENT_SUFFIX}#"
  namespace: "#{DEPLOYMENT_NAMESPACE}#"
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: "#{SUB_DOMAIN_NAME_PORTAL}#"
    cme.cert-manager.io/http01-edit-in-place: "true"
spec:
  loadBalancerIP: "#{PORTAL_INTERNAL_IP}#"
  type: LoadBalancer
  selector:
    istio: "ingressgateway-#{DEPLOYMENT_SUFFIX}#"
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "istio-ingressgateway-#{DEPLOYMENT_SUFFIX}#"
  namespace: "#{DEPLOYMENT_NAMESPACE}#"
spec:
  selector:
    matchLabels:
      istio: "ingressgateway-#{DEPLOYMENT_SUFFIX}#"
  template:
    metadata:
      annotations:
        # Select the gateway injection template (rather than the default sidecar template)
        inject.istio.io/templates: gateway
      labels:
        # Set a unique label for the gateway. This is required to ensure Gateways can select this workload
        istio: "ingressgateway-#{DEPLOYMENT_SUFFIX}#"
        # Enable gateway injection. If connecting to a revisioned control plane, replace with "istio.io/rev: revision-name"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: istio-proxy
        image: auto # The image will automatically update each time the pod starts.
